# Talisker

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
Applications/: Makefile.am
BuildProducts/: Makefile.am
BuildProducts/Freestanding/: .gitignore  Makefile.am
BuildProducts/Hosted/: .gitignore  Makefile.am
BuildProducts/Native/: .gitignore
Documentation/: Makefile.am  README.md
Freestanding/: .gitignore  README.md
Hosted/: .gitignore
Native/: .gitignore  Makefile.am
Personalities/: README.md
